--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="navbar">
         <div class="logo">
@@ -18,18 +20,23 @@
             </div>
 
             <div class="log-btn">
-            <button class="btn"><a href="#"class="log-links"> Login</a></button></div>
+                <button class="btn"><a href="#" class="log-links"> Login</a></button>
+            </div>
         </div>
     </div>
 
-    <!-- <hr> -->
+    <hr>
 
     <div class="container">
         <div class="main-img">
             <img src="college.jpeg" alt="">
+
         </div>
 
-        
-    
+
+
+
+
 </body>
+
 </html>
