--- a/dashboard.html
+++ b/dashboard.html
@@ -4,55 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
-    <link rel="stylesheet" href="dashboard.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Document</title>
 </head>
 <body>
-    <div id="navigation">
-        <div id="menu" onclick="onClickMenu()">
-            <div id="bar1" class="bar"></div>
-            <div id="bar2"class="bar"></div>
-            <div id="bar3"class="bar"></div>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Nav</title>
+        <link rel="stylesheet" href="dashboard.css">
+    </head>
+    <body>
+        <div class="header">
+            <nav class="navbar">
+                <ul>
+                    <img src="th.jpeg" alt="" >
+                </ul>
+                <ul>
+                    <li><a href="#">Dashboard</a></li>
+                    <li><a href="#">Verification</a></li>
+                    <li><a href="#">Display Alumni</a></li>
+                    <li><a href="#">Display Alumni my directorate</a></li>
+                    <li><a href="#">Send E-mail</a></li>
+                    <li><a href="#">Setting</a></li>
+                </ul>
+            </nav>
         </div>
-        <ul class="nav" id="nav">
-            <h1>Authority</h1>
-            <li><a href="#">
-                <div class="navimage"><img src="https://img.icons8.com/material-outlined/24/000000/speed--v1.png"/></div>
-                Dashboard
-            </a>
-            </li>
-            <li><a href="#">
-                <div class="navimage"><img src="https://img.icons8.com/ios-glyphs/24/000000/approval.png"/></div>
-                Verification</a>
-            </li>
-            <li><a href="#">
-                <div class="navimage"><img src="https://img.icons8.com/ios-glyphs/24/000000/student-center.png"/></div>
-                Display Alumni</a>
-            </li>
-            <li><a href="#">
-            <div class="navimage"><img src="https://img.icons8.com/windows/24/null/atom-editor.png"/></div>
-            Display alumni by directorate</a>
-            </li>
-            <li><a href="#">
-                <div class="navimage"><img src="https://img.icons8.com/ios/24/null/email-open.png"/></div>
-            Send Email</a>
-        </li>
-            <li><a href="#" class="nav-link">
-                <div class="navimage"><img src="https://img.icons8.com/ios/24/000000/settings--v1.png"/></div>
-                Setting</a></li>
-            
-        </ul>
-    </div>
-    <script src="dashboard.js"></script>
- <div class="clearfix"></div>
-<div class="footer">
-    <div class="footer-content">
-        &copy; Web Wizards
-    </div>
-</div>
 
-
-
+        <div class="footer">
+            <div class="footer-content">
+                <h4>&copy; Copyright reserved on behalf of Web Wizards</h4>
+            </div>
+        </div>
+    </body>
+    </html>
 </body>
 </html>
