--- a/alumni.html
+++ b/alumni.html
@@ -25,7 +25,7 @@
                 <ul>
                     <li><a href="#">Update Details</a></li>
                     <li><a href="#">Add a Job</a></li>
-                    <li><a href="#">Messages</a></li>
+                    <li><a href="#">Chat with Community</a></li>
                     <li><a href="#">Settings</a></li>
                     <button class="btn">
                         <li>Logout</li>
