--- a/landing.html
+++ b/landing.html
@@ -1,31 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Landing Page</title>
-    <link rel="stylesheet" href="landing.css">
-</head>
-<body>
-    <div class="main">
-        <div class="container">
-            <nav>
-                <ul>
-                    <li><a href="#">About</a></li>
-                </ul>
-                <ul>
-                    <li><a href="#">Alumni Registration</a></li>
-                    <button class="btn">Log In </button>
-                </ul>
-            </nav>
-        </div>
-
-        <div class="head">
-            <h1>Building a Stronger Alumni Network </h1>
-        </div>
-
-    
+    <link rel="stylesheet" href="landing.css" />
+    <script src="Landing.js"></script>
+  </head>
+  <body>
+    <div class="wrapper hidden">
+      <div class="form-wrapper login">
+        <span class="close"><i class="fa-solid fa-xmark"></i></span>
+        <form action="">
+          <h2>Login</h2>
+          <div class="insert">
+            <input type="text" placeholder="Enter your user name" required />
+            <!-- <label for="">Username:</label> -->
+          </div>
+          <div class="insert">
+            <input
+              type="password"
+              id="passcode"
+              placeholder="Enter your password"
+              required
+            />
+            <!-- <label for="">Password:</label> -->
+            <span class="eye" onclick="myFuncttion()">
+              <i id="open-eye" class="fa-solid fa-eye"></i>
+              <i id="close-eye" class="fa-solid fa-eye-slash"></i>
+            </span>
+          </div>
+          <div class="checkbox">
+            <label for=""><input type="checkbox" /> Remember me</label>
+          </div>
+          <button type="submit">Login</button>
+          <!-- <div class="register-link">
+                    <p>Don't have an account? <a href="#" class="register">Register</a></p>
+                </div> -->
+        </form>
+      </div>
     </div>
-</body>
+    <div class="overlay hidden"></div>
+    <div class="main">
+      <div class="container">
+        <nav>
+          <ul>
+            <li><a href="#">About</a></li>
+          </ul>
+          <ul>
+            <li><a href="#">Alumni Registration</a></li>
+            <button class="btn">Log In</button>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="head">
+        <h1>Building a Stronger Alumni Network</h1>
+      </div>
+
+      <script>
+        function myFuncttion() {
+          var x = document.getElementById("passcode");
+          var y = document.getElementById("open-eye");
+          var z = document.getElementById("close-eye");
+
+          if (x.type === "password") {
+            x.type = "text";
+            y.style.display = "block";
+            z.style.display = "none";
+          } else {
+            x.type = "password";
+            y.style.display = "none";
+            z.style.display = "block";
+          }
+        }
+
+        const btn1 = document.querySelector(".btn");
+        const wrapper = document.querySelector(".wrapper");
+        const overlay = document.querySelector(".overlay");
+        const close = document.querySelector(".close");
+
+        const openForm = function () {
+          wrapper.classList.remove("hidden");
+          overlay.classList.remove("hidden");
+        };
+        const closeForm = function () {
+          wrapper.classList.add("hidden");
+          overlay.classList.add("hidden");
+        };
+
+        btn1.addEventListener("click", openForm);
+        close.addEventListener("click", closeForm);
+        overlay.addEventListener("click", closeModal);
+        //       document.addEventListener('keydown', function (e) {
+        // console.log(e.key)};
+      </script>
+    </div>
+  </body>
 </html>
