--- a/job.html
+++ b/job.html
@@ -119,6 +119,10 @@
                     </label><br>
                     <input type="text" class="inp">
                 </div>
+
+                <button class="btn">
+                    Save Information
+                </button>
             </div>
 
         </form>
